# tree-sitter-atom

./: Cargo.toml  binding.gyp  demo.mantis  grammar.js  package-lock.json  package.json  update.sh
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: function_definition.txt
